# cosmwasm-data-de-example

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
dummy-contract/: Cargo.toml
dummy-contract/src/: contract.rs
